Feat: Implement preliminary PatternMatchingService.